# test-gpkg-to-png

./: .gitignore  CLAUDE.md  Cargo.toml  LESSONS.md  README.md
.github/workflows/: release.yml
docs/plans/: 2026-02-01-gpkg-to-png-design.md  2026-02-01-gpkg-to-png-implementation.md  2026-02-01-high-performance-scanline-renderer.md  2026-02-02-cross-platform-ci-design.md  2026-02-02-empty-type-multipolygon-implementation.md  2026-02-02-empty-type-multipolygon-support.md  2026-02-02-geojson-support-design.md  2026-02-02-verbosity-control-design.md  2026-02-02-verbosity-refactor-design.md  2026-02-02-verbosity-refactor-implementation.md
src/: cli.rs  error.rs  geojson.rs  gpkg.rs  logger.rs  main.rs  math.rs  render.rs
src/render/: edge.rs
tests/: geojson_integration.rs  integration.rs
