[package]
name = "gpkg-to-png"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
geo = "0.29"
geojson = "0.24"
image = "0.25"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rayon = "1.10"
atty = "0.2"

[target.'cfg(not(windows))'.dependencies]
proj = { version = "0.31", features = ["bundled_proj"] }

[target.'cfg(windows)'.dependencies]
proj = { version = "0.31" }
